# CloneRobotics-CodingTask

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/common/include/: protocol.h
src/emulator/: main.cpp
